# permitd

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  schema.cedarschema
docs/plans/: 2026-02-21-permitd-implementation.md  2026-02-21-permitd-v0.1-design.md
examples/: config.toml  routes.podman.toml
examples/policies/: deploy.cedar  readonly.cedar
infra/traefik/: docker-compose.yml  traefik.yml
infra/traefik/dynamic/: permitd.yml
run/policies/: guardrail-allowed-users.cedar  karenbolon-transcendence-deploy.cedar  waltervargas-pong-deploy.cedar
scripts/: setup-permitd-user.sh  start-traefik.sh
src/: cli.rs  config.rs  error.rs  main.rs
src/cedar/: engine.rs  entities.rs  eval.rs  mod.rs
src/jwt/: claims.rs  jwks.rs  mod.rs  validation.rs
src/proxy/: upstream.rs
src/routing/: mapping.rs  matcher.rs  mod.rs  resource.rs
src/server/: handler.rs
systemd/: permitd.service
tests/fixtures/: test_private_key.pem  test_public_key.pem
